# exam_project2

./: CMakeLists.txt  Google_tests.rar  README.md
Google_tests/: invert_in_test.cpp  search_serve_test.cpp
include/: const_var.h  converter_js.h  invert_in.h  search_serve.h
src/: CMakeLists.txt  converter_js.cpp  exam_project.cpp  invert_in.cpp  search_serve.cpp
test_json/: answers.json
